# Dagit

./: CMakeLists.txt  README.md  dagit  main.cpp
include/commands/: cat_file_command.hpp  commit_command.hpp  hash_object_command.hpp  icommand.hpp  init_command.hpp  log_command.hpp  read_tree_command.hpp  version_command.hpp  write_tree.hpp
include/core/: commit.hpp  object_store.hpp  repository.hpp  tree.hpp
src/: test_compilation.cpp
src/commands/: cat_file_command.cpp  hash_object_command.cpp  log_command.cpp  write_tree.cpp
src/core/: comimit.cpp  commit.cpp  object_store.cpp  repository.cpp  tree.cpp
